--- a/portfolio.html
+++ b/portfolio.html
@@ -148,12 +148,48 @@
         </section>
         </main>
     <footer class="footer">
-        <div class="section-content-wrapper">
-            <a class="logo link" href="./index.html"> <span class="logo-first-part">Web</span><span
-                    class="logo-second-part">Studio</span>
-            </a>
-            <p class="footer-desc">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <h2 class="hidden">Footer</h2>
+        <div class="section-content-wrapper footer-content">
+            <div class="footer-content-first-part">
+                <a class="logo link" href="./index.html"> <span class="logo-first-part">Web</span><span
+                        class="logo-second-part">Studio</span>
+                </a>
+                <p class="footer-desc">Increase the flow of customers and sales for your business with digital marketing &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-content-second-part">
+                <h3 class="footer-second-part-title">Social media</h3>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="16" height="16">
+                                <use href="./img/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="16" height="16">
+                                <use href="./img/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="16" height="16">
+                                <use href="./img/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="16" height="16">
+                                <use href="./img/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
