--- a/index.html
+++ b/index.html
@@ -52,19 +52,39 @@
                 <h2 class="hidden">Strategy</h2>
                 <ul class="plus-list list">
                     <li class="plus-list-item">
+                        <div class="plus-list-picture">
+                            <svg class="plus-list-icon" width="64" height="64">
+                                <use href="./img/sprite.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                             <h3 class="plus-list-title">Strategy</h3>
                             <p class="plus-list-desc">Our goal is to identify the business
                                 problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="plus-list-item">
+                        <div class="plus-list-picture">
+                            <svg class="plus-list-icon" width="64" height="64">
+                                <use href="./img/sprite.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                             <h3 class="plus-list-title">Punctuality</h3>
                             <p class="plus-list-desc">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li class="plus-list-item">
+                        <div class="plus-list-picture">
+                            <svg class="plus-list-icon" width="64" height="64">
+                                <use href="./img/sprite.svg#icon-comp"></use>
+                            </svg>
+                        </div>
                             <h3 class="plus-list-title">Diligence</h3>
                             <p class="plus-list-desc">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li class="plus-list-item">
+                        <div class="plus-list-picture">
+                            <svg class="plus-list-icon" width="64" height="64">
+                                <use href="./img/sprite.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="plus-list-title">Technologies</h3>
                         <p class="plus-list-desc">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
