added modal window and svg files

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="hero section-hero">
             <div class="section-content-wrapper hero-content">
                 <h1 class="main-title">Effective Solutions <br> for Your Business</h1>
-                <button class="modal-btn" type="button">Order Service</button>
+                <button class="modal-btn" type="button" data-modal-open>Order Service</button>
             </div>
         </section>
         <!--about-->
@@ -360,6 +360,18 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="modal-close-btn-icon" width="8" height="8">
+                    <use href="./img/sprite.svg#icon-close-modal"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
