--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,12 @@
             <div class="section-content-wrapper">
                 <ul class="examples-list list">
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-1.jpg" alt="Banking App">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-1.jpg" alt="Banking App">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                            Cloud Storage App</p>
+                            </div>
                                 <div class="examples-description-wrapper">
                                     <h2 class="examples-title">Banking App Interface Concept</h2>
                                 <p class="examples-desc">App</p>
@@ -72,8 +76,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-2.jpg" alt="Cashless Payment">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-2.jpg" alt="Cashless Payment">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Cashless Payment</h2>
                                 <p class="examples-desc">Marketing</p>
@@ -81,8 +90,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-3.jpg" alt="Meditaion App">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-3.jpg" alt="Meditaion App">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                                </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Meditaion App</h2>
                                 <p class="examples-desc">App</p>
@@ -90,8 +104,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-4.jpg" alt="Taxi Service">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-4.jpg" alt="Taxi Service">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Taxi Service</h2>
                                 <p class="examples-desc">Marketing</p>
@@ -99,8 +118,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-5.jpg" alt="Wallpaper with the moon and space">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-5.jpg" alt="Wallpaper with the moon and space">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Screen Illustrations</h2>
                                 <p class="examples-desc">Design</p>
@@ -108,8 +132,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-6.jpg" alt="girl with a headphones holding a phone">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-6.jpg" alt="girl with a headphones holding a phone">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Online Course</h2>
                                 <p class="examples-desc">Marketing</p>
@@ -117,8 +146,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-7.jpg" alt="Examples pages from instagram stories">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-7.jpg" alt="Examples pages from instagram stories">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Instagram Stories Concept</h2>
                                 <p class="examples-desc">Design</p>
@@ -126,8 +160,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-8.jpg" alt="girl is holding a bag of vegetables">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-8.jpg" alt="girl is holding a bag of vegetables">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Organic Food</h2>
                                 <p class="examples-desc">Web Site</p>
@@ -135,8 +174,13 @@
                         </a>
                     </li>
                     <li class="examples-item">
-                        <a class="link" href="#">
-                            <img width="360" src="./img/examples/example-9.jpg" alt="a man pouring milk into a cup of coffee">
+                        <a class="link examples-item-link" href="#">
+                            <div class="examples-item-wrapper">
+                                <img width="360" src="./img/examples/example-9.jpg" alt="a man pouring milk into a cup of coffee">
+                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                Fruit Ecommerce App ·
+                                Cloud Storage App</p>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Fresh Coffee</h2>
                                 <p class="examples-desc">Web Site</p>
