fixed box-shadow bug

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,22 +66,25 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-1.jpg" alt="Banking App">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                            Cloud Storage App</p>
-                            </div>
-                                <div class="examples-description-wrapper">
-                                    <h2 class="examples-title">Banking App Interface Concept</h2>
-                                <p class="examples-desc">App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·Cloud Storage App</p>
                                 </div>
+                            </div>
+                            <div class="examples-description-wrapper">
+                                <h2 class="examples-title">Banking App Interface Concept</h2>
+                                <p class="examples-desc">App</p>
+                            </div>
                         </a>
                     </li>
                     <li class="examples-item">
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-2.jpg" alt="Cashless Payment">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Cashless Payment</h2>
@@ -93,10 +96,12 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-3.jpg" alt="Meditaion App">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
                                 </div>
+                            </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Meditaion App</h2>
                                 <p class="examples-desc">App</p>
@@ -107,9 +112,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-4.jpg" alt="Taxi Service">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Taxi Service</h2>
@@ -121,9 +128,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-5.jpg" alt="Wallpaper with the moon and space">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Screen Illustrations</h2>
@@ -135,9 +144,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-6.jpg" alt="girl with a headphones holding a phone">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Online Course</h2>
@@ -149,9 +160,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-7.jpg" alt="Examples pages from instagram stories">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Instagram Stories Concept</h2>
@@ -163,9 +176,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-8.jpg" alt="girl is holding a bag of vegetables">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Organic Food</h2>
@@ -177,9 +192,11 @@
                         <a class="link examples-item-link" href="#">
                             <div class="examples-item-wrapper">
                                 <img width="360" src="./img/examples/example-9.jpg" alt="a man pouring milk into a cup of coffee">
-                                <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-                                Fruit Ecommerce App ·
-                                Cloud Storage App</p>
+                                <div class="overlay">
+                                    <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                                    Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                                </div>
                             </div>
                             <div class="examples-description-wrapper">
                                 <h2 class="examples-title">Fresh Coffee</h2>
